# awtrix-addon

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  release  repository.yaml
awtrix-addon/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  config.yaml  pyproject.toml  run.sh
awtrix-addon/scripts/: live_bedroom_clock.py  smoke.py
awtrix-addon/src/awtrix_addon/: __init__.py  api.py  assets.py  auth.py  errors.py  lifecycle.py  live_payload_helpers.py  main.py  melodies.py  mqtt.py  palette.py  renderer.py  settings.py
awtrix-addon/tests/: test_contract.py  test_live_payloads.py
awtrix-addon/translations/: en.yaml
