[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "awtrix-addon"
version = "0.1.22"
description = "Home Assistant App service for controlled AWTRIX event overlays"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9", "Pillow>=10", "paho-mqtt>=2", "PyYAML>=6"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
awtrix-addon = "awtrix_addon.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
awtrix_addon = ["library/melodies/Default/*.rtttl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
